# media-sharing-service

./: .dockerignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
app/: app.py
app/auth/: backend.py  dependencies.py  manager.py
app/clients/: imagekit.py
app/core/: config.py  exceptions.py
app/db/: database.py  users.py
app/db/migrations/: env.py
app/db/migrations/versions/: 40e98f27462e_create_posts_table.py  69bd480dbcca_add_users.py
app/models/: __init__.py  post.py  user.py
app/repositories/: post.py
app/routers/: auth.py  post.py
app/schemas/: post.py  user.py
app/services/: post.py
